<resources>
    <string name="app_name">Campus Craves</string>
    <string name="enter">Enter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerNewAccount">Register New Account</string>
    <string name="firstName">First Name</string>
    <string name="register">Register</string>
    <string name="lastName">Last Name</string>
    <string name="signIn">Have account? Sign in</string>
    <string name="searchForYourCraves">Search for \nyour craves</string>
    <string name="cuisineType">Cuisine Type:</string>
    <string name="dietaryPref">Dietary Preferences:</string>
    <string name="ratings">Ratings</string>
    <string name="serviceType">Service Type:</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="addtoList">Add To List</string>
    <string name="addReview">Add Review</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
</resources>