<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/line"
        android:layout_width="410dp"
        android:layout_height="3dp"
        android:layout_marginBottom="60dp"
        android:background="#E5E5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/home_button_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ImageButton
        android:id="@+id/listButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/list_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeButton" />

    <ImageButton
        android:id="@+id/reviewsButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/review_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/account_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/searchButton"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/roundstyle"

        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.00"
        android:padding="1dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceTypeInput" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="294dp"
        android:layout_height="140dp"
        android:layout_marginTop="92dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="-20dp"
        android:text="@string/searchForYourCraves"
        android:textColor="#FFA95C"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/serviceTypeInput"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:background="@drawable/roundstyle_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceType" />

    <Spinner
        android:id="@+id/ratingsInput"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:background="@drawable/roundstyle_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratings" />

    <Spinner
        android:id="@+id/dietaryPrefInput"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:background="@drawable/roundstyle_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietaryPref" />

    <Spinner
        android:id="@+id/cuisineTypeInput"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:background="@drawable/roundstyle_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuisineType" />

    <TextView
        android:id="@+id/cuisineType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/cuisineType"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/dietaryPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/dietaryPref"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cuisineTypeInput" />

    <TextView
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/ratings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietaryPrefInput" />

    <TextView
        android:id="@+id/serviceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/serviceType"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingsInput" />


</androidx.constraintlayout.widget.ConstraintLayout>